<resources>
    <string name="app_name">FindAPlant</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="search_bar_placeholder_string">Search…</string>

    <string name="logged_in_user_string">Now you are a logged in user of this app!</string>
    <string name="account_login_string">Account login</string>
    <string name="email_hint_string">Email</string>
    <string name="password_hint_string">Password</string>
    <string name="login_string">Login</string>
    <string name="register_string">Register</string>
    <string name="register_new_account_string">Register new account</string>
    <string name="register_success_string">Registration successful!</string>
    <string name="register_failed_string">Registration failed! Please try again later</string>
    <string name="invalid_password">Password must contain 8 characters with one letter and one number!</string>
    <string name="invalid_email">Please enter valid email…</string>
    <string name="login_toast">Please enter email…</string>
    <string name="password_toast">Please enter password!</string>
    <string name="logout">Logout</string>
    <string name="title_activity_camera">CameraActivity</string>
    <!--  Nav Menu  -->
    <string name="menu_bookmark">Bookmarks</string>
    <string name="menu_search">Learn</string>
    <string name="menu_camera">Capture</string>
    <string name="menu_observations">Observations</string>
    <string name="menu_setting">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Firestore Form -->
    <string name="firestore_name">name</string>
    <string name="firestore_user_data">User Data</string>
    <string name="firestore_save_data">Save Data</string>
    <string name="title_activity_no_auth">Find A Plant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_hint_string">Name</string>
    <string name="account_details_string">User Information</string>
    <string name="finish_string">Finish</string>
    <string name="firestore_photo">Profile Picture</string>
    <string name="username_hint_string">Username</string>
    <string name="alt_observation_image">Observation Image</string>
    <string name="bookmark_none">No Bookmarks</string>
    <string name="observations_none">No Observations</string>
    <string name="signup">Sign Up</string>
    <string name="observation_coordinate">Location</string>
    <string name="observation_time">Time</string>
    <string name="observation_description">Describe what you saw...</string>
    <string name="alt_send_button">Send</string>
    <string name="alt_thumbnail_delete">Delete</string>
    <string name="alt_search_button">Search</string>
    <string name="prompt_observation">Organism name...</string>
    <string name="alt_observation_delete">Delete</string>
    <string name="observation_common">Common Name</string>
    <string name="observation_scientific">Scientific Name</string>
</resources>