<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bookmarks"
        android:icon="@drawable/ic_baseline_bookmark_24"
        android:title="@string/menu_bookmark"  />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/menu_search" />
    <item
        android:id="@+id/camera"
        android:icon="@drawable/ic_baseline_camera_alt_24"
        android:title="@string/menu_camera" />

    <item
        android:id="@+id/explore"
        android:icon="@drawable/ic_baseline_explore_24"
        android:title="@string/menu_explore" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/menu_setting" />
</menu>