<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_observation" />

        <ImageButton
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_search_24"
            android:contentDescription="@string/alt_search_button" />
    </FrameLayout>

    <!-- Main Observations recycler -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerObservations"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_observation" />

    <TextView
        android:id="@+id/noneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/observations_none"
        android:textSize="40sp" />


</LinearLayout>